<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/screen_three">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/yoga"
        android:contentDescription="@string/image_1" />


    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:lineSpacingMultiplier="1"
        android:text="@string/text1"
        android:textColor="@color/text"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="25dp">

    </TextView>

    <Button
        android:id="@+id/mybtn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@color/btn2"
        android:text="@string/GETSTARTED"
        android:textColor="@color/colorPrimary">

    </Button>


</LinearLayout>

